# CSE-3226

./: Cover.docx  Index.odt
Day 1/Drawings/: Codes.odt  Cover.docx
Day 1/In Lab/: pyproject.toml  test.ipynb
Day 1/Python/: test.py  test2.py  test3.py
Day 2/Drawings/: Codes.odt  Cover.docx
Day 2/Homework/Python/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  pyproject.toml
Day 2/In Lab/: Lab_2.ipynb  pyproject.toml
Day 3/: lab.ipynb  pyproject.toml
Day 3/Drawings/: Codes.odt  Cover.docx
Day 3/Homework/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  pyproject.toml
Day 3/In Lab/: lab.ipynb  pyproject.toml
Day 4/: 1.ipynb  test.py
Day 4/Drawings/: Codes.odt  Cover.docx
Day 4/Homework/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  pyproject.toml
Day 4/In Lab/: 1.ipynb  pyproject.toml
Day 5/: main.ipynb  main.py
Day 5/Drawing/: Codes.odt  Cover.docx
Day 5/Homework/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  pyproject.toml
Day 5/In Lab/: main.ipynb  pyproject.toml
Final Lab Practise/: main.py  pyproject.toml  test.ipynb
Lab Final/: lab copy.ipynb  lab.ipynb  main.py  pyproject.toml
Mid/: main.py  pyproject.toml  test.ipynb
Mid Lab Final Practise/: pyproject.toml  run-1.ipynb  run-2.ipynb  target.txt
