[project]
name = "lab-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas>=3.0.2",
    "ruff>=0.15.9",
]
[tool.ruff]
extend-include = ["*.ipynb"]
